err/haufe.monitoring.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/demjson-2.2.4.egg-info'...
Listing './lib/python3.5/site-packages/haufe'...
Listing './lib/python3.5/site-packages/haufe/monitoring'...
Listing './lib/python3.5/site-packages/haufe/monitoring/browser'...
Compiling './lib/python3.5/site-packages/haufe/monitoring/browser/monitor.py'...
***   File "./lib/python3.5/site-packages/haufe/monitoring/browser/monitor.py", line 46
    except urllib2.URLError, e:
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/haufe/monitoring/browser/unix.py'...
***   File "./lib/python3.5/site-packages/haufe/monitoring/browser/unix.py", line 55
    print getLoad()
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/haufe/monitoring/network.py'...
***   File "./lib/python3.5/site-packages/haufe/monitoring/network.py", line 39
    print is_allowed('10.11.12.13')
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/haufe/monitoring/resources'...
Listing './lib/python3.5/site-packages/haufe.monitoring-0.2.1.4.egg-info'...
Listing './lib/python3.5/site-packages/ipcalc-1.99.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
